--- a/style.css
+++ b/style.css
@@ -50,18 +50,28 @@ header img {
 }
 
 .apply {
-    border: 1px solid black;
-    /*display: flex;
-    flex-direction: column;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: auto;
+    background-color: white;
 }
 form,
 .apply h1,
-.apply p{
-    margin: 0 10%;
+.apply p {
+    margin: 0 auto;
 }
-
 input[type="text"] {
     font-family: Montserrat-Light;
+    padding: 10px 0px 10px 25px;
+    margin: 10px 0;
+    background-color: #f7F7ff;
+    width: 100%;
+}
+input[type="submit"] {
+    background-color: #57eeab;
+    color: black;
+    padding: 10px 25px;
 }
 
 footer { 
@@ -71,7 +81,6 @@ footer {
 footer p {
     margin: 0 10%;
 }
-
 .socialicons {
     padding: 25px;
     display: flex;
