--- a/style.css
+++ b/style.css
@@ -72,13 +72,11 @@ header img {
     height: auto;
 }
 
-/* the form takes its shape thanks to every line of code written within this block of code below. from flexbox, to the padding, to adding a shadow to the outside of the form. */
+/* the form takes its shape thanks to every line of code written within this block of code below. from flexbox, to the border-radius, to adding a shadow to the outside of the form. */
 .apply {
     display: flex;
     flex-direction: column;
-    align-items: left;
     background-color: white;
-    padding: auto;
     border-radius: 30px;
     box-shadow: 10px 10px 10px rgba(128,128,128, 0.5);
     margin-top: 25px;
@@ -310,5 +308,37 @@ footer input[type="submit"] {
     /* for this final line of code in the tablet view, instead of having all of the social media icons squished beside one another, i have a padding on the left and right of 25px so that they are at least a bit spread out, while still centered in the middle of the page. */
     .socialicons img {
         padding: 0 25px;
+    }
+}
+/* this @media deals with everything that changes to web view. */
+@media (min-width: 1024px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 15vh 60vh 25vh;
+    }
+
+    main header {
+        grid-column: 1 / 2;
+    }
+
+    main .boss {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    main .scooter {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    main .apply {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+
+    main footer {
+        grid-column: 1 / span 3;
+        grid-row: 3 / 4;
     }
 }
